--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width">
 	<link rel="icon" type="image/favicon" href="images/favicon/favicon.ico">
 	<link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-180x180.png">
 	<title>GFTD.CAFE</title>
