--- a/menu.html
+++ b/menu.html
@@ -8,10 +8,10 @@
 	<title>GFTD.CAFE</title>
 	<meta name="description" content="GFTD.CAFEは、渋谷駅新南口から歩いて約5分のところにあります。発達障害に効く食材で脳の中からリフレッシュ。あなたもギフテッドなカフェで癒されてみませんか？">
 <!-- リセットCSSとスタイルシート -->
-	<link rel="stylesheet" href="css/ress.css">
-	<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/ress.css">
+<link rel="stylesheet" href="css/style.css">
 <!-- Google Fonts	 -->
-<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
 <body>
 	<header>
 		<a href="index.html">
@@ -26,7 +26,7 @@
 		</nav>
 	</header>
 	<main>
-
+		
 	</main>
 	<footer>
 <small>©︎2019 GFTD.WORKS</small>
