--- a/contact.html
+++ b/contact.html
@@ -13,23 +13,82 @@
 <!-- Google Fonts	 -->
 <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
 <body>
-	<header>
-		<a href="index.html">
-			<img src="images/logos/logo.svg" alt="GFTD.CAFE">
+	<header class="contactimg">
+		
+		<a href="index.html" >
+			<img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin">
 		</a>
 		<nav>
 		<ul>
-			<li><a href="">NEWS</a></li>
-			<li><a href="">MENU</a></li>
-			<li><a href="">CONTACT</a></li>
+			<li><a href="news.html">NEWS</a></li>
+			<li><a href="menu.html">MENU</a></li>
+			<li><a href="contact.html">CONTACT</a></li>
 		</ul>
 		</nav>
+		<h1>CONTACT</h1>
+		<form action="">
+			<dl>
+				<dt><p>お名前</p></dt>
+				<dd><input type="text" name="text"></dd>
+				<dt><p>メールアドレス</p></dt>
+				<dd><input type="email" name="mailadress"></dd>
+				<dt><p>メッセージ</p></dt>
+				<dd><textarea name="message" id="" cols="50" rows="3"></textarea></dd>
+			</dl>
+			<input type="submit" name="submit">
+			
+		
+			
+			
+			
+		</form>
 	</header>
 	<main>
+		<section class="block">
+			<div class="flame">
+			<div class="desmap">
+				<h4 class="areatitle">GFTD.CAFE 渋谷店</h4>
+				<dl>
+					<dt class="dt1">住所：</dt><dd>東京都渋谷区</dd>
+					<dd>渋谷3-27-15</dd>
+					<dd>坂上ビル6F</dd>
+					<dt class="dt1">電話：</dt>
+					<dd>050-3187-6831</dd>
+					<dt class="dt1">営業時間：</dt><dd>10:00~20:00</dd>
+					<dt>休日：</dt><dd>土曜、日曜</dd>
+				</dl>
+			</div>
+		
+		<div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8498152738775!2d139.70248031508294!3d35.65607168020023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b5bc514d2f1%3A0xc9d96d92aa2e457e!2z44CSMTUwLTAwMDIg5p2x5Lqs6YO95riL6LC35Yy65riL6LC377yT5LiB55uu77yS77yX4oiS77yR77yVIDZG!5e0!3m2!1sja!2sjp!4v1619761185696!5m2!1sja!2sjp" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy"  class="mappos"></iframe>
+		</div>
+	</div>
+		</section>
+		<section class="asidside">
+			<div class="asidegrid">
+				<h4 class="sns1">Facebook</h4>
+				<h4 class="sns2">Twitter</h4>
+				<h4  class="sns3">YouTube</h4>
+					<iframe class="iframe1" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgiftedacademy.tokyo%2F&tabs=timeline&width=300&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+							
+					<a class="twitter-timeline" data-lang="ja" data-width="300" data-height="300" data-dnt="true" href="https://twitter.com/gftd_works?ref_src=twsrc%5Etfw">Tweets by gftd_works</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		
+						<iframe class="iframe3" width="300" height="300" src="https://www.youtube.com/embed/S-HmZp4aOQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</section>
+			<!-- <div class ="mag">
 
+			</div> -->
+	
+	
 	</main>
-	<footer>
-		<small>©︎2019 GFTD.WORKS</small>
+
+	<footer class="contactcopy">
+		<small><p>©︎2019 GFTD.WORKS</p></small>
+		<div class="empty">
+
+		</div>
 	</footer>
+
 </body>
 </html>
