--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
 	<link rel="icon" type="image/favicon" href="images/favicon/favicon.ico">
 	<link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-180x180.png">
 	<title>GFTD.CAFE</title>
 	<meta name="description" content="GFTD.CAFEは、渋谷駅新南口から歩いて約5分のところにあります。発達障害に効く食材で脳の中からリフレッシュ。あなたもギフテッドなカフェで癒されてみませんか？">
 <!-- リセットCSSとスタイルシート -->
 	<link rel="stylesheet" href="css/ress.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css" media="screen">
+
+	<!--レスポンシブ メディアクエリ -->
 <!-- Google Fonts	 -->
 <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
 </head>
@@ -17,7 +19,7 @@
 
 <header>
 	<a href="index.html">
-		<div><img src="images/logos/logo.svg" alt="GFTD.CAFE"></div>
+		<img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin screensize">
 	</a>
 	<nav>
 	<ul>
