--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=300">
 	<link rel="icon" type="image/favicon" href="images/favicon/favicon.ico">
 	<link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-180x180.png">
 	<title>GFTD.CAFE</title>
@@ -13,23 +13,53 @@
 <!-- Google Fonts	 -->
 <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
 <body>
-	<header>
-		<a href="index.html">
-			<img src="images/logos/logo.svg" alt="GFTD.CAFE">
-		</a>
-		<nav>
-		<ul>
-			<li><a href="">NEWS</a></li>
-			<li><a href="">MENU</a></li>
-			<li><a href="">CONTACT</a></li>
-		</ul>
-		</nav>
-	</header>
-	<main>
+	<header class="heading2">
+		<div class="bgmask">
+			<a href="index.html">
+				<div>		<img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin"></div>
 		
+			</a>
+			<nav class="navmargin">
+			<ul>
+				<li><a href="news.html">NEWS</a></li>
+				<li><a href="menu.html">MENU</a></li>
+				<li><a href="contact.html">CONTACT</a></li>
+			</ul>
+			</nav>
+			<div class="menudes">
+				<h1>MENU</h1>
+				<p>脳に刺激を与える食品を提供する、GFTD CAFE。刺激<br>のある食材を利用したメニューが特徴です。苦いブレ<br>ンドコーヒーと辛いジャンクフードで脳の内側から刺<br>激されてください。</p>
+			</div>
+		</div>
+	</header>
+	<main class="tilelayout">
+			<div class="tile centerout responsegrid">
+				
+				<img src="images/menu/tile/menu1.jpg" alt="ブレンドコーヒー" class="tile1 small1 tilesize1"><br>
+				<h4 class="small1 text1">写真キャプション写真キャプション</h4>
+				<img src="images/menu/tile/menu2.jpg" alt="辛いおつまみ" class="tile2 small2"><br>
+				<h4 class="small2 text2">写真キャプション写真キャプション</h4>
+				<img src="images/menu/tile/menu3.jpg" alt="香辛料" class="tile3 small3"><br>
+				<h4 class="small3 text3">写真キャプション写真キャプション</h4>
+					<img src="images/menu/tile/menu4.jpg" alt="美味しい唐揚げ" class="tile4 small4"><br>
+					<h4 class="small4 text4">写真キャプション写真キャプション</h4>
+					<img src="images/menu/tile/menu5.jpg" alt="ピリ辛キムチ" class="tile5 small5"><br>
+					<h4 class="small5 text5">写真キャプション写真キャプション</h4>
+					<img src="images/menu/tile/menu6.jpg" alt="志望０のカップラーメン" class="tile6 small6"><br>
+					<h4 class="small6 text6">写真キャプション写真キャプション</h4>
+					<img src="images/menu/tile/menu7.jpg" alt="油控えめの中華そば"class="tile7 small7"><br>
+					<h4 class="small7 text7">写真キャプション写真キャプション</h4>
+					<img src="images/menu/tile/menu8.jpg" alt="朝食メニュー" class="tile8 small8"><br>
+					<h4 class="small8 text8">写真キャプション写真キャプション</h4>
+					<img src="images/menu/tile/menu9.jpg" alt="ミネラル豊富！キノコピザ" class="tile9 small9"><br>
+					<h4 class="small9 text9">写真キャプション写真キャプション</h4>
+		</div>
+	<section>
+
+	</section>
 	</main>
 	<footer>
-<small>©︎2019 GFTD.WORKS</small>
+		<small><p>©︎2019 GFTD.WORKS</p></small>
 	</footer>
 </body>
 </html>
