--- a/news.html
+++ b/news.html
@@ -16,13 +16,13 @@
 <body>
 	<header class="heading">
 		<a href="index.html">
-			<img src="images/logos/logo.svg" alt="GFTD.CAFE">
+			<img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin">
 		</a>
 		<nav>
 		<ul>
-			<li><a href="">NEWS</a></li>
-			<li><a href="">MENU</a></li>
-			<li><a href="">CONTACT</a></li>
+			<li><a href="news.html">NEWS</a></li>
+			<li><a href="menu.html">MENU</a></li>
+			<li><a href="contact.html">CONTACT</a></li>
 		</ul>
 		</nav>
 		<h1 class="bold">NEWS</h1>
@@ -46,14 +46,14 @@
 		
 			<img src="images/news/wall.jpg" alt="店内のイメージ">
 			<p>
-				脳に刺激を与える食品を提供する、GFTD.CAFE。刺激のある食材を利用したメニ<br>ューが特徴です。苦いブレンドコーヒーと辛いジャンクフードで脳の内側から刺<br>激されてください。
-				脳に刺激を与える食品を提供する、GFTD.CAFE。刺激のある<br>食材を利用したメニューが特徴です。苦いブレンドコーヒーと辛いジャンクフー<br>ドで脳の内側から刺激されてください。<br>
+				脳に刺激を与える食品を提供する、GFTD CAFE。刺激のある食材を利用したメニ<br>ューが特徴です。苦いブレンドコーヒーと辛いジャンクフードで脳の内側から刺<br>激されてください。
+				脳に刺激を与える食品を提供する、GFTD CAFE。刺激のある<br>食材を利用したメニューが特徴です。苦いブレンドコーヒーと辛いジャンクフー<br>ドで脳の内側から刺激されてください。<br>
 				
 			
 			</p>
 			<p class="marginp">
-				脳に刺激を与える食品を提供する、GFTD.CAFE。刺激のある食材を利用したメニ<br>ューが特徴です。苦いブレンドコーヒーと辛いジャンクフードで脳の内側から刺<br>激されてください。
-				脳に刺激を与える食品を提供する、GFTD.CAFE。刺激のある<br>食材を利用したメニューが特徴です。苦いブレンドコーヒーと辛いジャンクフー<br>ドで脳の内側から刺激されてください。<br>
+				脳に刺激を与える食品を提供する、GFTD CAFE。刺激のある食材を利用したメニ<br>ューが特徴です。苦いブレンドコーヒーと辛いジャンクフードで脳の内側から刺<br>激されてください。
+				脳に刺激を与える食品を提供する、GFTD CAFE。刺激のある<br>食材を利用したメニューが特徴です。苦いブレンドコーヒーと辛いジャンクフー<br>ドで脳の内側から刺激されてください。<br>
 				
 			</p>
 			<p class="marginp2">脳に刺激を与える食品を提供する、GFTD.CAFE。</p>
@@ -69,7 +69,7 @@
 			</ul>
 			<div>
 				<p class="hlist">このお店について<p>
-				<p>脳に刺激を与える食品を提<br>供する、GFTD.CAFE。刺<br>激のある食材を利用したメ<br>ニューが特徴です。苦いブ<br>レンドコーヒーと辛いジャ<br>ンクフードで脳の内側から<br>刺激されてください。</p>
+				<p>脳に刺激を与える食品を提<br>供する、GFTD CAFE。刺<br>激のある食材を利用したメ<br>ニューが特徴です。苦いブ<br>レンドコーヒーと辛いジャ<br>ンクフードで脳の内側から<br>刺激されてください。</p>
 			</div>
 		</aside>
 	</main>
