--- a/news.html
+++ b/news.html
@@ -14,11 +14,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <body>
-	<header class="heading">
+	<header class="heading spres">
 		<a href="index.html">
 			<img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin">
 		</a>
-		<nav>
+		<nav >
 		<ul>
 			<li><a href="news.html">NEWS</a></li>
 			<li><a href="menu.html">MENU</a></li>
