--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,14 @@
 <!-- Google Fonts	 -->
 <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
 <body>
+
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v11.0" nonce="6tJLrL0L"></script>
+
 	<header class="contactimg">
-		
+		<div class="flexrow">
 		<a href="index.html" >
-			<img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin">
+			<img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin contlogo">
 		</a>
 		<nav>
 		<ul>
@@ -25,6 +29,7 @@
 			<li><a href="contact.html">CONTACT</a></li>
 		</ul>
 		</nav>
+		</div>
 		<h1>CONTACT</h1>
 		<form action="">
 			<dl>
@@ -49,42 +54,47 @@
 			<div class="desmap">
 				<h4 class="areatitle">GFTD.CAFE 渋谷店</h4>
 				<dl>
-					<dt class="dt1">住所：</dt><dd>東京都渋谷区</dd>
-					<dd>渋谷3-27-15</dd>
-					<dd>坂上ビル6F</dd>
+					<dt class="dt1">住所：</dt><dd class="dd2">東京都渋谷区</dd>
+					<dd class="ddmob1">渋谷3-27-15</dd>
+					<dd class="ddmob1">坂上ビル6F</dd>
 					<dt class="dt1">電話：</dt>
-					<dd>050-3187-6831</dd>
-					<dt class="dt1">営業時間：</dt><dd>10:00~20:00</dd>
-					<dt>休日：</dt><dd>土曜、日曜</dd>
+					<dd class="dd2">050-3187-6831</dd>
+					<dt class="dt1">営業時間：</dt><dd class="dd4">10:00~20:00</dd>
+					<dt>休日：</dt><dd class="ddmob1 dd3">土曜、日曜</dd>
 				</dl>
 			</div>
 		
-		<div>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8498152738775!2d139.70248031508294!3d35.65607168020023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b5bc514d2f1%3A0xc9d96d92aa2e457e!2z44CSMTUwLTAwMDIg5p2x5Lqs6YO95riL6LC35Yy65riL6LC377yT5LiB55uu77yS77yX4oiS77yR77yVIDZG!5e0!3m2!1sja!2sjp!4v1619761185696!5m2!1sja!2sjp" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy"  class="mappos"></iframe>
+		<div class="flamewid">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.8498152738775!2d139.70248031508294!3d35.65607168020023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b5bc514d2f1%3A0xc9d96d92aa2e457e!2z44CSMTUwLTAwMDIg5p2x5Lqs6YO95riL6LC35Yy65riL6LC377yT5LiB55uu77yS77yX4oiS77yR77yVIDZG!5e0!3m2!1sja!2sjp!4v1619761185696!5m2!1sja!2sjp" style="border:0;" allowfullscreen="" loading="lazy"  class="mappos"></iframe>
 		</div>
 	</div>
 		</section>
 		<section class="asidside">
 			<div class="asidegrid">
-				<h4 class="sns1">Facebook</h4>
-				<h4 class="sns2">Twitter</h4>
-				<h4  class="sns3">YouTube</h4>
-					<iframe class="iframe1" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgiftedacademy.tokyo%2F&tabs=timeline&width=300&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+				<div class="snsdig">
+						<h4 class="sns1">Facebook</h4>
+						<iframe class="iframe1 fb_iframe_widget" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgiftedacademy.tokyo%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+						</div>
+						<div class="snsdig2">
+							<h4 class="sns2">Twitter</h4>
 							
-					<a class="twitter-timeline" data-lang="ja" data-width="300" data-height="300" data-dnt="true" href="https://twitter.com/gftd_works?ref_src=twsrc%5Etfw">Tweets by gftd_works</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		
-						<iframe class="iframe3" width="300" height="300" src="https://www.youtube.com/embed/S-HmZp4aOQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<a class="twitter-timeline twitter-time2" data-lang="ja" data-width="300" data-height="300" data-dnt="true" href="https://twitter.com/gftd_works?ref_src=twsrc%5Etfw">Tweets by gftd_works</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+						
+						</div>
+						<div class="snsdig3">
+							<h4  class="sns3">YouTube</h4>
+							<iframe class="iframe3" width="300" height="300" src="https://www.youtube.com/embed/S-HmZp4aOQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
+				</div>
+			
+	
+
 			</div>
 		</section>
-			<!-- <div class ="mag">
-
-			</div> -->
-	
-	
 	</main>
 
 	<footer class="contactcopy">
-		<small><p>©︎2019 GFTD.WORKS</p></small>
+		<small><p class="contactp">©︎2019 GFTD.WORKS</p></small>
 		<div class="empty">
 
 		</div>
