--- a/menu.html
+++ b/menu.html
@@ -14,23 +14,25 @@
 <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
 <body>
 	<header class="heading2">
-		<div class="bgmask">
+		<div class="flexrow">
 			<a href="index.html" >
-				<div>		<img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin"></div>
+				<div><img src="images/logos/logo.svg" alt="GFTD.CAFE" class=" margin manubg"></div>
 		
 			</a>
 			<nav class="navmargin">
-			<ul>
+			<ul class="menunav">
 				<li><a href="news.html">NEWS</a></li>
 				<li><a href="menu.html">MENU</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
 			</nav>
+		</div>
 			<div class="menudes">
 				<h1>MENU</h1>
 				<p>脳に刺激を与える食品を提供する、GFTD CAFE。刺激<br>のある食材を利用したメニューが特徴です。苦いブレ<br>ンドコーヒーと辛いジャンクフードで脳の内側から刺<br>激されてください。</p>
-			</div>
+	
 		</div>
+	
 	</header>
 	<main class="tilelayout">
 			<div class="tile centerout responsegrid">
@@ -58,8 +60,8 @@
 
 	</section>
 	</main>
-	<footer>
-		<small><p>©︎2019 GFTD.WORKS</p></small>
+	<footer class="marginfoot">
+		<small><p class="fontfoot">©︎2019 GFTD.WORKS</p></small>
 	</footer>
 </body>
 </html>
